--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jun 22 2024 07:40:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017cdb6" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
     <div class="container-default w-container">
       <div data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecaa7" class="header-content-wrapper">
         <div class="header-left-side">
-          <a href="index.html" class="header-logo-link left w-nav-brand"><img src="images/SOC-logo.svg" alt="" width="Auto" height="48" class="header-logo"></a>
+          <a href="index.html" class="header-logo-link left w-nav-brand"><img src="images/SOC-logo_1.svg" alt="" width="Auto" height="48" class="header-logo"></a>
           <nav role="navigation" class="header-nav-menu-wrapper w-nav-menu">
             <ul role="list" class="header-nav-menu-list">
               <li class="header-nav-list-item left">
@@ -52,7 +52,6 @@
               </li>
               <li class="header-nav-list-item left"></li>
               <li class="header-nav-list-item show-in-tablet header-btn">
-                <a data-w-id="29a89eb1-5288-408f-7b08-6ecf7b1a0fbe" href="documentary.html" class="btn-primary small width-100 nav w-button">DOCUMENTARY<span class="line-rounded-icon arrow-right"></span></a>
                 <a href="https://atlas.storiesofchange.co/" class="btn-primary small width-100 w-button">CLIMATE ATLAS<span class="line-rounded-icon arrow-right"></span></a>
               </li>
             </ul>
@@ -184,7 +183,7 @@
             </div>
           </div>
           <div data-w-id="d4609760-5717-26ee-7672-e5422e4fd42d" class="footer-bottom-v1 footer-bottom-v1---small-print">
-            <a id="w-node-d4609760-5717-26ee-7672-e5422e4fd42f-91dd5701" href="#" class="footer-logo-wrapper mg-bottom-0 w-inline-block"><img src="images/SOC-LOGO_1.svg" alt="" class="footer-logo"></a>
+            <a id="w-node-d4609760-5717-26ee-7672-e5422e4fd42f-91dd5701" href="#" class="footer-logo-wrapper mg-bottom-0 w-inline-block"><img src="images/SOC-LOGO.svg" alt="" class="footer-logo"></a>
             <div class="inner-container _400px---mbl footer-bottom-v1---small-print">
               <p class="mg-bottom-0">Copyright © Stories of Change<a href="https://webflow.com/" target="_blank"></a>
               </p>
