--- a/template-pages/style-guide.html
+++ b/template-pages/style-guide.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jun 22 2024 07:40:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce9e" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -1866,7 +1866,7 @@
               </div>
             </div>
             <div data-w-id="d4609760-5717-26ee-7672-e5422e4fd42d" class="footer-bottom-v1 footer-bottom-v1---small-print">
-              <a id="w-node-d4609760-5717-26ee-7672-e5422e4fd42f-91dd5701" href="#" class="footer-logo-wrapper mg-bottom-0 w-inline-block"><img src="../images/SOC-LOGO_1.svg" alt="" class="footer-logo"></a>
+              <a id="w-node-d4609760-5717-26ee-7672-e5422e4fd42f-91dd5701" href="#" class="footer-logo-wrapper mg-bottom-0 w-inline-block"><img src="../images/SOC-LOGO.svg" alt="" class="footer-logo"></a>
               <div class="inner-container _400px---mbl footer-bottom-v1---small-print">
                 <p class="mg-bottom-0">Copyright © Stories of Change<a href="https://webflow.com/" target="_blank"></a>
                 </p>
