--- a/uthal-pathal.html
+++ b/uthal-pathal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jun 22 2024 07:40:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66733d3de4a2e0e6d41c81e5" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -33,7 +33,7 @@
       <div class="container-default w-container">
         <div data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecaa7" class="header-content-wrapper">
           <div class="header-left-side">
-            <a href="index.html" class="header-logo-link left w-nav-brand"><img src="images/SOC-logo.svg" alt="" width="Auto" height="48" class="header-logo"></a>
+            <a href="index.html" class="header-logo-link left w-nav-brand"><img src="images/SOC-logo_1.svg" alt="" width="Auto" height="48" class="header-logo"></a>
             <nav role="navigation" class="header-nav-menu-wrapper w-nav-menu">
               <ul role="list" class="header-nav-menu-list">
                 <li class="header-nav-list-item left">
@@ -53,7 +53,6 @@
                 </li>
                 <li class="header-nav-list-item left"></li>
                 <li class="header-nav-list-item show-in-tablet header-btn">
-                  <a data-w-id="29a89eb1-5288-408f-7b08-6ecf7b1a0fbe" href="documentary.html" class="btn-primary small width-100 nav w-button">DOCUMENTARY<span class="line-rounded-icon arrow-right"></span></a>
                   <a href="https://atlas.storiesofchange.co/" class="btn-primary small width-100 w-button">CLIMATE ATLAS<span class="line-rounded-icon arrow-right"></span></a>
                 </li>
               </ul>
@@ -72,11 +71,11 @@
     <div class="top-section bg-neutral-100 position-relative---z-index-1">
       <div class="container-default-2 w-container">
         <div class="grid-2-columns _1-8fr---1fr mg-bottom-48px">
-          <div class="text-center---tablet">
+          <div class="text-center---tablet responsive">
             <div class="subtitle-2">stories of Cyclone Remal</div>
             <h2 class="display-6">Uthal Pathal</h2>
             <h2 class="display-6 texttitle"><strong class="bold-text-2">উথাল পাথাল </strong>Topsy-Turvy</h2>
-            <p class="mg-bottom-48px---tablet">As Remal rages on the coast of patuakhali, the villagers are pushed to the edge to survive through the storm.</p>
+            <p class="mg-bottom-48px---tablet">As Cyclone Remal rages on the coast of patuakhali, the villagers are pushed to the edge to survive through the storm.</p>
             <div id="w-node-_4a058e4a-8f1c-760e-6e42-8bc4e9ab760c-d41c81e5" class="mg-bottom-12px">
               <div id="w-node-_4a058e4a-8f1c-760e-6e42-8bc4e9ab760d-d41c81e5" class="inner-container _330px _100-mbl padding-over">
                 <p class="mg-bottom-32px-3 mg-bottom-16px-mbl color-neutral-600 bold-text">DIRECTOR&#x27;S NOTE</p>
@@ -103,6 +102,7 @@
                 <div id="w-node-_8a436163-9844-498b-fee2-e04d7ff2aa38-d41c81e5" data-w-id="8a436163-9844-498b-fee2-e04d7ff2aa38" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card-2 date-story-content first">
                   <div class="text-center---tablet">
                     <div class="subtitle-2">DIRECTED BY</div>
+                    <div class="avatar-circle _05 uthal"><img srcset="images/11-p-500.png 500w, images/11-p-800.png 800w, images/11.png 1006w" loading="eager" sizes="(max-width: 767px) 100px, 120px" src="images/11.png" alt="" class="avatar-image _w-h-100 fit-cover"></div>
                     <h2 class="display-6">Mashrukur Rahman Khan</h2>
                     <p class="mg-bottom-48px---tablet">Mashrukur Rahman Khan is an independent documentary filmmaker based in Dhaka, Bangladesh. </p>
                   </div>
@@ -110,6 +110,7 @@
                 <div id="w-node-_8a436163-9844-498b-fee2-e04d7ff2aa3d-d41c81e5" data-w-id="8a436163-9844-498b-fee2-e04d7ff2aa3d" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card-2 date-story-content">
                   <div class="text-center---tablet">
                     <div class="subtitle-2">Produced BY</div>
+                    <div class="avatar-circle _05 uthal"><img srcset="images/2-p-500.png 500w, images/2-p-800.png 800w, images/2.png 1006w" loading="eager" sizes="(max-width: 767px) 100px, 120px" src="images/2.png" alt="" class="avatar-image _w-h-100 fit-cover"></div>
                     <h2 class="display-6">Rifat Abrar Anik</h2>
                     <p class="mg-bottom-48px---tablet">Rifat Abrar Anik is a climate activist and filmmaker working on community resilience in Bangladesh. </p>
                   </div>
@@ -126,6 +127,60 @@
       </div>
     </section>
     <section class="section pd-top-0px"></section>
+    <section class="section pd-top-0px">
+      <div class="container-default w-container">
+        <div class="inner-container _898px center">
+          <div data-w-id="cbc465f5-5a3a-f18b-46a0-30ac9312880c" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="inner-container _600px center">
+            <div class="text-center mg-bottom-64px">
+              <div class="subtitle">screening sessions</div>
+              <h2 class="display-2">Experience the documentary</h2>
+            </div>
+          </div>
+          <div data-w-id="cbc465f5-5a3a-f18b-46a0-30ac93128812" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid grid-1-column gap-row-0">
+            <div id="w-node-cbc465f5-5a3a-f18b-46a0-30ac93128813-d41c81e5" data-w-id="cbc465f5-5a3a-f18b-46a0-30ac93128813" class="accordion-item-wrapper first">
+              <div class="accordion-big-number-wrapper">
+                <div class="display-3 screening">BGD</div>
+                <div class="accordion-content-wrapper v2">
+                  <div class="accordion-header">
+                    <h3 class="accordion-title display-3">Press Club</h3>
+                  </div>
+                  <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="acordion-body">
+                    <div class="accordion-spacer"></div>
+                    <p class="mg-bottom-0">Documentary Trailer Release followed by a Roundtable Discussion at an Event Titled &quot;Growing Disasters with Extreme Heat&quot; organised by Change Initiative in the presence of representatives from the Ministry of Disaster Management and Relief, Bangladesh Parliament. <br><br>04 June, 2024<br>Press Club, Dhaka<br>‍<br>Closed Event</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-side right-side">
+                <div class="accordion-icon-wrapper">
+                  <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0)" class="accordion-btn-line vertical"></div>
+                  <div class="accordion-btn-line horizontal"></div>
+                </div>
+              </div>
+            </div>
+            <div data-w-id="cbc465f5-5a3a-f18b-46a0-30ac9312882c" class="accordion-item-wrapper">
+              <div class="accordion-big-number-wrapper">
+                <div class="display-3 screening">BGD</div>
+                <div class="accordion-content-wrapper">
+                  <div class="accordion-header">
+                    <h3 class="accordion-title display-3"><span class="text-no-wrap">DrikPath Bhobon</span></h3>
+                  </div>
+                  <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="acordion-body">
+                    <div class="accordion-spacer"></div>
+                    <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>23 June, 2024<br>2nd Floor (Drik Gallery), DrikPath Bhobon, Sukrabad Rd, Dhaka <br>07:00 PM (GMT +6)<br><br>Closed Event</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-side right-side">
+                <div class="accordion-icon-wrapper">
+                  <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0)" class="accordion-btn-line vertical"></div>
+                  <div class="accordion-btn-line horizontal"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer-wrapper">
       <div class="container-default w-container">
         <div class="card footer-card-wrapper">
@@ -225,7 +280,7 @@
               </div>
             </div>
             <div data-w-id="d4609760-5717-26ee-7672-e5422e4fd42d" class="footer-bottom-v1 footer-bottom-v1---small-print">
-              <a id="w-node-d4609760-5717-26ee-7672-e5422e4fd42f-91dd5701" href="#" class="footer-logo-wrapper mg-bottom-0 w-inline-block"><img src="images/SOC-LOGO_1.svg" alt="" class="footer-logo"></a>
+              <a id="w-node-d4609760-5717-26ee-7672-e5422e4fd42f-91dd5701" href="#" class="footer-logo-wrapper mg-bottom-0 w-inline-block"><img src="images/SOC-LOGO.svg" alt="" class="footer-logo"></a>
               <div class="inner-container _400px---mbl footer-bottom-v1---small-print">
                 <p class="mg-bottom-0">Copyright © Stories of Change<a href="https://webflow.com/" target="_blank"></a>
                 </p>
