--- a/uthal-pathal.html
+++ b/uthal-pathal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jun 22 2024 07:40:51 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jun 22 2024 14:14:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66733d3de4a2e0e6d41c81e5" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -80,6 +80,7 @@
               <div id="w-node-_4a058e4a-8f1c-760e-6e42-8bc4e9ab760d-d41c81e5" class="inner-container _330px _100-mbl padding-over">
                 <p class="mg-bottom-32px-3 mg-bottom-16px-mbl color-neutral-600 bold-text">DIRECTOR&#x27;S NOTE</p>
                 <p class="mg-bottom-32px-3 mg-bottom-16px-mbl color-neutral-600">As Cyclone Remal approached, we arrived in Debpur village in Dhankhali Upazila, Bangladesh, and were immediately struck by the stark contrast between the official warnings of impending devastation and the villagers&#x27; apparent lack of preparedness. Over the following days, amidst the unfolding chaos, we documented the lives of individuals grappling with the imminent threat of destruction.This film captures the overbearing anxiety that grips entire communities in the face of an approaching cyclone. Through intimate encounters and candid interviews, we witness firsthand the resilience and fear of those directly in Remal&#x27;s path. Their voices echo the overwhelming power of nature and the human spirit in adversity.</p>
+                <a data-w-id="f2c94eeb-0b3e-9b21-d8c1-6dea925a2394" href="https://1f8kqnyefwl.typeform.com/to/K5UoVbYp" target="_blank" class="btn-primary white button-row w-button">Premiere Registration <span class="line-rounded-icon arrow-right"></span></a>
               </div>
             </div>
           </div>
@@ -166,7 +167,8 @@
                   </div>
                   <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="acordion-body">
                     <div class="accordion-spacer"></div>
-                    <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>23 June, 2024<br>2nd Floor (Drik Gallery), DrikPath Bhobon, Sukrabad Rd, Dhaka <br>07:00 PM (GMT +6)<br><br>Closed Event</p>
+                    <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>23 June, 2024<br>2nd Floor (Drik Gallery), DrikPath Bhobon, Sukrabad Rd, Dhaka <br>07:00 PM (GMT +6)<br></p>
+                    <a data-w-id="9808947e-ff45-4d19-7b80-2086e6370784" href="https://1f8kqnyefwl.typeform.com/to/K5UoVbYp" target="_blank" class="btn-primary white button-row margin-top w-button">Premiere Registration <span class="line-rounded-icon arrow-right"></span></a>
                   </div>
                 </div>
               </div>
