--- a/uthal-pathal.html
+++ b/uthal-pathal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jun 22 2024 18:32:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 02 2024 06:53:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66733d3de4a2e0e6d41c81e5" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -80,7 +80,7 @@
               <div id="w-node-_4a058e4a-8f1c-760e-6e42-8bc4e9ab760d-d41c81e5" class="inner-container _330px _100-mbl padding-over">
                 <p class="mg-bottom-32px-3 mg-bottom-16px-mbl color-neutral-600 bold-text">DIRECTOR&#x27;S NOTE</p>
                 <p class="mg-bottom-32px-3 mg-bottom-16px-mbl color-neutral-600">As Cyclone Remal approached, we arrived in Debpur village in Dhankhali Upazila, Bangladesh, and were immediately struck by the stark contrast between the official warnings of impending devastation and the villagers&#x27; apparent lack of preparedness. Over the following days, amidst the unfolding chaos, we documented the lives of individuals grappling with the imminent threat of destruction.This film captures the overbearing anxiety that grips entire communities in the face of an approaching cyclone. Through intimate encounters and candid interviews, we witness firsthand the resilience and fear of those directly in Remal&#x27;s path. Their voices echo the overwhelming power of nature and the human spirit in adversity.</p>
-                <a data-w-id="f2c94eeb-0b3e-9b21-d8c1-6dea925a2394" href="https://forms.gle/oF6FB9rFveQUryf9A" target="_blank" class="btn-primary white button-row w-button">Premiere Registration <span class="line-rounded-icon arrow-right"></span></a>
+                <a data-w-id="e97df813-c4f5-3858-a75c-ff5c2100417c" href="https://forms.gle/W4imgfLUcMpyYNcX9" target="_blank" class="btn-primary white button-row margin-top w-button">Screening Registration <span class="line-rounded-icon arrow-right"></span></a>
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
               <h2 class="display-2">Experience the documentary</h2>
             </div>
           </div>
-          <div data-w-id="cbc465f5-5a3a-f18b-46a0-30ac93128812" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid grid-1-column gap-row-0">
+          <div class="w-layout-grid grid-1-column gap-row-0">
             <div id="w-node-cbc465f5-5a3a-f18b-46a0-30ac93128813-d41c81e5" data-w-id="cbc465f5-5a3a-f18b-46a0-30ac93128813" class="accordion-item-wrapper first">
               <div class="accordion-big-number-wrapper">
                 <div class="display-3 screening">BGD</div>
@@ -158,17 +158,38 @@
                 </div>
               </div>
             </div>
-            <div data-w-id="cbc465f5-5a3a-f18b-46a0-30ac9312882c" class="accordion-item-wrapper">
+            <div class="accordion-item-wrapper">
               <div class="accordion-big-number-wrapper">
                 <div class="display-3 screening">BGD</div>
                 <div class="accordion-content-wrapper">
                   <div class="accordion-header">
                     <h3 class="accordion-title display-3"><span class="text-no-wrap">DrikPath Bhobon</span></h3>
                   </div>
-                  <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="acordion-body">
+                  <div class="acordion-body">
                     <div class="accordion-spacer"></div>
                     <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>23 June, 2024<br>2nd Floor (Drik Gallery), DrikPath Bhobon, Sukrabad Rd, Dhaka <br>07:00 PM (GMT +6)<br></p>
                     <a data-w-id="9808947e-ff45-4d19-7b80-2086e6370784" href="https://forms.gle/oF6FB9rFveQUryf9A" target="_blank" class="btn-primary white button-row margin-top w-button">Premiere Registration <span class="line-rounded-icon arrow-right"></span></a>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-side right-side">
+                <div class="accordion-icon-wrapper">
+                  <div class="accordion-btn-line vertical"></div>
+                  <div class="accordion-btn-line horizontal"></div>
+                </div>
+              </div>
+            </div>
+            <div id="w-node-_16cbbac0-b570-f9b2-95a3-1ea1ac802611-d41c81e5" data-w-id="16cbbac0-b570-f9b2-95a3-1ea1ac802611" class="accordion-item-wrapper">
+              <div class="accordion-big-number-wrapper">
+                <div class="display-3 screening">BGD</div>
+                <div class="accordion-content-wrapper">
+                  <div class="accordion-header">
+                    <h3 class="accordion-title display-3"><span class="text-no-wrap">Attention Network</span></h3>
+                  </div>
+                  <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="acordion-body">
+                    <div class="accordion-spacer"></div>
+                    <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>23 June, 2024<br>2nd Floor (Drik Gallery), DrikPath Bhobon, Sukrabad Rd, Dhaka <br>07:00 PM (GMT +6)<br></p>
+                    <a data-w-id="44d1bcbb-d5ae-73a0-a324-824c89b040c0" href="https://forms.gle/W4imgfLUcMpyYNcX9" target="_blank" class="btn-primary white button-row margin-top w-button">Screening Registration <span class="line-rounded-icon arrow-right"></span></a>
                   </div>
                 </div>
               </div>
