--- a/uthal-pathal.html
+++ b/uthal-pathal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 02 2024 06:53:13 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 02 2024 07:01:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66733d3de4a2e0e6d41c81e5" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -158,28 +158,27 @@
                 </div>
               </div>
             </div>
-            <div class="accordion-item-wrapper">
+            <div id="w-node-_16cbbac0-b570-f9b2-95a3-1ea1ac802611-d41c81e5" data-w-id="16cbbac0-b570-f9b2-95a3-1ea1ac802611" class="accordion-item-wrapper">
               <div class="accordion-big-number-wrapper">
                 <div class="display-3 screening">BGD</div>
                 <div class="accordion-content-wrapper">
                   <div class="accordion-header">
                     <h3 class="accordion-title display-3"><span class="text-no-wrap">DrikPath Bhobon</span></h3>
                   </div>
-                  <div class="acordion-body">
+                  <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="acordion-body">
                     <div class="accordion-spacer"></div>
                     <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>23 June, 2024<br>2nd Floor (Drik Gallery), DrikPath Bhobon, Sukrabad Rd, Dhaka <br>07:00 PM (GMT +6)<br></p>
-                    <a data-w-id="9808947e-ff45-4d19-7b80-2086e6370784" href="https://forms.gle/oF6FB9rFveQUryf9A" target="_blank" class="btn-primary white button-row margin-top w-button">Premiere Registration <span class="line-rounded-icon arrow-right"></span></a>
                   </div>
                 </div>
               </div>
               <div class="accordion-side right-side">
                 <div class="accordion-icon-wrapper">
-                  <div class="accordion-btn-line vertical"></div>
+                  <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0)" class="accordion-btn-line vertical"></div>
                   <div class="accordion-btn-line horizontal"></div>
                 </div>
               </div>
             </div>
-            <div id="w-node-_16cbbac0-b570-f9b2-95a3-1ea1ac802611-d41c81e5" data-w-id="16cbbac0-b570-f9b2-95a3-1ea1ac802611" class="accordion-item-wrapper">
+            <div id="w-node-_25d4bfef-2c2b-ea94-b652-613b0a300bed-d41c81e5" data-w-id="25d4bfef-2c2b-ea94-b652-613b0a300bed" class="accordion-item-wrapper">
               <div class="accordion-big-number-wrapper">
                 <div class="display-3 screening">BGD</div>
                 <div class="accordion-content-wrapper">
@@ -188,8 +187,8 @@
                   </div>
                   <div style="height:0px;-webkit-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 20px, 0) scale3d(0.96, 0.96, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="acordion-body">
                     <div class="accordion-spacer"></div>
-                    <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>23 June, 2024<br>2nd Floor (Drik Gallery), DrikPath Bhobon, Sukrabad Rd, Dhaka <br>07:00 PM (GMT +6)<br></p>
-                    <a data-w-id="44d1bcbb-d5ae-73a0-a324-824c89b040c0" href="https://forms.gle/W4imgfLUcMpyYNcX9" target="_blank" class="btn-primary white button-row margin-top w-button">Screening Registration <span class="line-rounded-icon arrow-right"></span></a>
+                    <p class="mg-bottom-0">Documentary Screening followed by a panel discussion in the presence of relevant stakeholders about possible locally-led multi-lateral intervention with the presence of representatives from local communities. <br>‍<br>07 July, 2024<br>Attention Network, 16th Floor, Dhaka Trade Centre, 99 Kazi Nazrul Islam Ave, Dhaka 1215<br>07:30 PM (GMT +6)<br></p>
+                    <a data-w-id="25d4bfef-2c2b-ea94-b652-613b0a300c03" href="https://forms.gle/W4imgfLUcMpyYNcX9" target="_blank" class="btn-primary white button-row margin-top w-button">Screening Registration <span class="line-rounded-icon arrow-right"></span></a>
                   </div>
                 </div>
               </div>
